--- a/faqs.qmd
+++ b/faqs.qmd
@@ -74,7 +74,7 @@ title: "Frequently Asked Questions"
 
 * What data should I cite?  <details><summary>Answer</summary>All datasets used in the paper (with no exceptions) should be cited both in the paper and in a dedicated section of the ReadMe file.</details>
 * If I mention my datasets in the Online Appendix or in the ReadMe file, should I cite them?  <details><summary>Answer</summary>Yes, all datasets used in the paper (with no exceptions) should be listed in the references section of the <b>paper</b> in the same way that we cite other papers, and a copy of these citations should appear in a dedicated section of the <b>ReadMe</b> file.</details>
-* How should I cite my data? <details><summary>Answer</summary> You should cite all datasets used in the paper (with no exceptions) in the references section of the <b>paper</b> in the same way that we cite other papers, and a copy of these citations should appear in a dedicated section of the <b>ReadMe</b> file. You can find some examples in page 7 of <a href="https://bit.ly/3ivH38d">this document</a>. More specific guidance on data citations is available <a href="https://social-science-data-editors.github.io/guidance/addtl-data-citation-guidance.html">here</a>.</details>
+* How should I cite my data? <details><summary>Answer</summary> You should cite all datasets used in the paper (with no exceptions) in the references section of the <b>paper</b> in the same way that we cite other papers, and a copy of these citations should appear in a dedicated section of the <b>ReadMe</b> file. More specific guidance on data citations is available <a href="https://social-science-data-editors.github.io/guidance/addtl-data-citation-guidance.html">here</a>.</details>
 * Why should I cite my data?  <details><summary>Answer</summary>Data citations are as fundamental as citations to other papers, if not more. Giving proper credit to data providers is in line with all scientific ethical standards. Moreover, giving proper credit to data providers ensures that they can keep receiving external funding to make their datasets publicly available for research.</details>
 
 ## Reproducibility Certification, Publication of the Replication Package and Copyright Issues
